# Fluor

./: .gitignore  CMakeLists.txt  README.md  TODO  test.pro  viewer.pro
data/: cytometers.ini  instruments.json  settings.ini  styles.ini
lib/: CMakeLists.txt
lib/public/: data_cytometers.h  data_factory.h  data_fluorophores.h  data_global.h  data_instruments.h  data_spectrum.h  data_styles.h
lib/src/: data_cytometers.cpp  data_factory.cpp  data_fluorophores.cpp  data_instruments.cpp  data_spectrum.cpp  data_styles.cpp
releases/Fluor v0.10.2/data/: fluorophores.json  settings.ini  styles.ini
resources/: resources.qrc
resources/icons/: fluor_dark.icns  fluor_light.icns
resources/licenses/: GPLv3.html  LGPLv3.html
src/: viewer_central_window.cpp  viewer_central_window.h  viewer_data_factory.cpp  viewer_data_factory.h  viewer_data_fluorophores.cpp  viewer_data_fluorophores.h  viewer_data_styles.cpp  viewer_data_styles.h  viewer_main.cpp  viewer_resources.qrc
src/data/: fluorophores.ini  settings.ini  styles.ini
tests/: test.md  test_data_factory.cpp  test_data_fluorophores.cpp  test_data_styles.cpp  test_file_fluorophores.cpp  test_file_settings.cpp  test_file_styles.cpp  test_main.cpp
widgets/header/: application.h  cache.h  central_controller.h  fluor_buttons.h  fluor_controller.h  fluor_lineedit.h  fluor_scrollarea.h  general_widgets.h  global.h  graph_controller.h  graph_format.h  graph_graphicsitems.h  graph_graphicsscene.h  graph_graphicsview.h  graph_settings.h  laser_buttons.h  laser_controller.h  laser_lineedit.h  main_controller.h  main_menu_bar.h  state.h  state_gui.h  state_program.h  toolbar_buttons.h  toolbar_controller.h
widgets/src/: application.cpp  cache.cpp  central_controller.cpp  fluor_buttons.cpp  fluor_controller.cpp  fluor_lineedit.cpp  fluor_scrollarea.cpp  general_widgets.cpp  graph_controller.cpp  graph_format.cpp  graph_graphicsitems.cpp  graph_graphicsscene.cpp  graph_graphicsview.cpp  graph_settings.cpp  laser_buttons.cpp  laser_controller.cpp  laser_lineedit.cpp  main.cpp  main_controller.cpp  main_menu_bar.cpp  state.cpp  state_gui.cpp  state_program.cpp  toolbar_buttons.cpp  toolbar_controller.cpp
